// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu renders Menu with Divider correctly 1`] = `
<ul
  class="za-menu za-menu-root za-menu-dark za-menu-inline"
  role="menu"
>
  <div>
    <li
      class="za-menu-level-1 za-menu-item"
      role="menuitem"
      style="padding-left:24px"
    >
      投保单复核
    </li>
  </div>
  <div>
    <li
      class="za-menu-level-1 za-menu-item"
      role="menuitem"
      style="padding-left:24px"
    >
      在线投保单管理
    </li>
  </div>
  <li
    class="ui-menu-item-divider"
  />
  <div>
    <li
      class="za-menu-level-1 za-menu-item"
      role="menuitem"
      style="padding-left:24px"
    >
      投保单录入
    </li>
  </div>
  <div>
    <li
      class="za-menu-level-1 za-menu-item"
      role="menuitem"
      style="padding-left:24px"
    >
      新增计划
    </li>
  </div>
</ul>
`;

exports[`Menu renders collpased Menu correctly 1`] = `
<ul
  class="za-menu za-menu-root za-menu-light za-menu-inline za-menu-collapsed"
  role="menu"
>
  <div
    class="ui-popover ui-tooltip za-menu-item__tooltip"
  >
    <div
      class="ui-popover-content ui-popover-content-radius"
    >
      投保单复核
      <span
        class="ui-popover-arrow"
      />
    </div>
    <div>
      <li
        class="za-menu-level-1 za-menu-item"
        role="menuitem"
      >
        投保单复核
      </li>
    </div>
  </div>
  <div
    class="ui-popover ui-tooltip za-menu-item__tooltip"
  >
    <div
      class="ui-popover-content ui-popover-content-radius"
    >
      在线投保单管理
      <span
        class="ui-popover-arrow"
      />
    </div>
    <div>
      <li
        class="za-menu-level-1 za-menu-item"
        role="menuitem"
      >
        在线投保单管理
      </li>
    </div>
  </div>
  <li
    class="ui-menu-item-divider"
  />
  <div
    class="ui-popover ui-tooltip za-menu-item__tooltip"
  >
    <div
      class="ui-popover-content ui-popover-content-radius"
    >
      投保单录入
      <span
        class="ui-popover-arrow"
      />
    </div>
    <div>
      <li
        class="za-menu-level-1 za-menu-item"
        role="menuitem"
      >
        投保单录入
      </li>
    </div>
  </div>
  <div
    class="ui-popover ui-tooltip za-menu-item__tooltip"
  >
    <div
      class="ui-popover-content ui-popover-content-radius"
    >
      新增计划
      <span
        class="ui-popover-arrow"
      />
    </div>
    <div>
      <li
        class="za-menu-level-1 za-menu-item"
        role="menuitem"
      >
        新增计划
      </li>
    </div>
  </div>
</ul>
`;

exports[`Menu renders dark Menu correctly 1`] = `
<ul
  class="za-menu za-menu-root za-menu-dark za-menu-inline"
  role="menu"
>
  <li
    class="za-menu-submenu za-menu-level-1"
  >
    <div
      class="za-menu-submenu-title"
      style="padding-left:24px"
    >
      新契约
      <i
        class="za-menu-submenu-arrow"
      />
    </div>
    <ul
      class="za-menu-submenu-sub"
      style="display:block"
    >
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          投保单复核
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          在线投保单管理
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          投保单录入
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          新增计划
        </li>
      </div>
    </ul>
  </li>
  <li
    class="za-menu-submenu za-menu-level-1"
  >
    <div
      class="za-menu-submenu-title"
      style="padding-left:24px"
    >
      核保
      <i
        class="za-menu-submenu-arrow"
      />
    </div>
    <ul
      class="za-menu-submenu-sub"
      style="display:block"
    >
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          核保权限定义
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          核保权限分配
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          规则配置
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          人工核保
        </li>
      </div>
    </ul>
  </li>
  <li
    class="za-menu-submenu za-menu-level-1"
  >
    <div
      class="za-menu-submenu-title"
      style="padding-left:24px"
    >
      批改
      <i
        class="za-menu-submenu-arrow"
      />
    </div>
    <ul
      class="za-menu-submenu-sub"
      style="display:block"
    >
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          批改新增
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          批改复核
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          批改回退
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          批改共享池
        </li>
      </div>
    </ul>
  </li>
</ul>
`;

exports[`Menu renders horizontal Menu correctly 1`] = `
<ul
  class="za-menu za-menu-root za-menu-light za-menu-horizontal"
  role="menu"
>
  <div>
    <li
      class="za-menu-level-1 za-menu-item active"
      role="menuitem"
    >
      意健险
    </li>
  </div>
  <div>
    <li
      class="za-menu-level-1 za-menu-item"
      role="menuitem"
    >
      健康险个险
    </li>
  </div>
  <div>
    <li
      class="za-menu-level-1 za-menu-item"
      role="menuitem"
    >
      雇主责任险
    </li>
  </div>
  <div>
    <li
      class="za-menu-level-1 za-menu-item"
      role="menuitem"
    >
      运营后台管理
    </li>
  </div>
  <div>
    <li
      class="za-menu-level-1 za-menu-item"
      role="menuitem"
    >
      公共功能
    </li>
  </div>
  <div>
    <li
      class="za-menu-level-1 za-menu-item"
      role="menuitem"
    >
      询报价
    </li>
  </div>
</ul>
`;

exports[`Menu renders inline Menu with SubMenu correctly 1`] = `
<ul
  class="za-menu za-menu-root za-menu-light za-menu-inline"
  role="menu"
>
  <li
    class="za-menu-submenu za-menu-level-1"
  >
    <div
      class="za-menu-submenu-title"
      style="padding-left:24px"
    >
      新契约
      <i
        class="za-menu-submenu-arrow"
      />
    </div>
    <ul
      class="za-menu-submenu-sub"
      style="display:block"
    >
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          投保单复核
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          在线投保单管理
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          投保单录入
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          新增计划
        </li>
      </div>
    </ul>
  </li>
  <li
    class="za-menu-submenu za-menu-level-1"
  >
    <div
      class="za-menu-submenu-title"
      style="padding-left:24px"
    >
      核保
      <i
        class="za-menu-submenu-arrow"
      />
    </div>
    <ul
      class="za-menu-submenu-sub"
      style="display:block"
    >
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          核保权限定义
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          核保权限分配
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          规则配置
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          人工核保
        </li>
      </div>
    </ul>
  </li>
  <li
    class="za-menu-submenu za-menu-level-1"
  >
    <div
      class="za-menu-submenu-title"
      style="padding-left:24px"
    >
      批改
      <i
        class="za-menu-submenu-arrow"
      />
    </div>
    <ul
      class="za-menu-submenu-sub"
      style="display:block"
    >
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          批改新增
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          批改复核
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          批改回退
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          批改共享池
        </li>
      </div>
    </ul>
  </li>
</ul>
`;

exports[`Menu renders nested SubMenus correctly 1`] = `
<ul
  class="za-menu za-menu-root za-menu-light za-menu-inline"
  role="menu"
>
  <li
    class="za-menu-submenu za-menu-level-1"
  >
    <div
      class="za-menu-submenu-title"
      style="padding-left:24px"
    >
      理赔
      <i
        class="za-menu-submenu-arrow"
      />
    </div>
    <ul
      class="za-menu-submenu-sub"
      style="display:block"
    >
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          报案
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          任务分配
        </li>
      </div>
      <li
        class="za-menu-submenu za-menu-level-2"
      >
        <div
          class="za-menu-submenu-title"
          style="padding-left:48px"
        >
          理赔工作流
          <i
            class="za-menu-submenu-arrow"
          />
        </div>
        <ul
          class="za-menu-submenu-sub"
          style="display:block"
        >
          <div>
            <li
              class="za-menu-level-3 za-menu-item"
              role="menuitem"
              style="padding-left:72px"
            >
              休假维护
            </li>
          </div>
          <div>
            <li
              class="za-menu-level-3 za-menu-item"
              role="menuitem"
              style="padding-left:72px"
            >
              时效维护
            </li>
          </div>
        </ul>
      </li>
    </ul>
  </li>
  <li
    class="za-menu-submenu za-menu-level-1"
  >
    <div
      class="za-menu-submenu-title"
      style="padding-left:24px"
    >
      新契约
      <i
        class="za-menu-submenu-arrow"
      />
    </div>
    <ul
      class="za-menu-submenu-sub"
      style="display:block"
    >
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          投保单复核
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          在线投保单管理
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          投保单录入
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          新增计划
        </li>
      </div>
    </ul>
  </li>
  <li
    class="za-menu-submenu za-menu-level-1"
  >
    <div
      class="za-menu-submenu-title"
      style="padding-left:24px"
    >
      核保
      <i
        class="za-menu-submenu-arrow"
      />
    </div>
    <ul
      class="za-menu-submenu-sub"
      style="display:block"
    >
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          核保权限定义
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          核保权限分配
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          规则配置
        </li>
      </div>
      <div>
        <li
          class="za-menu-level-2 za-menu-item"
          role="menuitem"
          style="padding-left:48px"
        >
          人工核保
        </li>
      </div>
    </ul>
  </li>
</ul>
`;
